refactor project merge